--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,25 @@
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
+    text-decoration: none;
 }
 
 body {
-    background: #FFF0F5;
+    background: rgb(248, 247, 247);
+}
+
+.header {
+    background: #06d6a0;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .App {
     display: flex;
     flex-direction: column;
-    width: 520px;
+    max-width: 1000px;
     justify-content: flex-start;
     align-items: center;
     text-align: center;
@@ -20,7 +29,7 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 32px;
-    min-height: 600px;
-    background: #ADD8E6;
+    min-height: 300px;
+    background: rgb(230, 228, 228);
     border-radius: 15px;
 }
