--- a/src/css/login.css
+++ b/src/css/login.css
@@ -29,6 +29,13 @@
     border-radius: 8px;
     margin: 10px 0;
     text-transform: uppercase;
+    transition: all .2s;
+}
+
+.login-button:hover{
+    box-shadow: 1px 1px 7px #bdbdbd;
+    transform: translateY(-3px);
+    transition: all .2s;
 }
 
 .register-main {
