--- a/src/css/register.css
+++ b/src/css/register.css
@@ -33,4 +33,11 @@
     border-radius: 8px;
     margin: 10px 0;
     text-transform: uppercase;
+    transition: all .2s;
+}
+
+.register-submit-button:hover {
+    box-shadow: 1px 1px 7px #bdbdbd;
+    transform: translateY(-3px);
+    transition: all .2s;
 }
